<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/spCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/item_array"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:hint="@string/name"
        android:layout_height="match_parent"/>

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:hint="@string/description"
        android:layout_height="match_parent"/>

    <EditText
        android:id="@+id/etPrice"
        android:inputType="number"
        android:hint="@string/price"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>