<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    card_view:cardBackgroundColor="#BB40C4D9"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/cbItem"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/purchased"
            android:textSize="20sp"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            card_view:layout_constraintBottom_toBottomOf="@+id/tvCost"
            card_view:layout_constraintStart_toEndOf="@+id/tvCost" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#F5BC2E"
            android:text="@string/delete"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            card_view:layout_constraintBottom_toBottomOf="@+id/btnDelete"
            card_view:layout_constraintStart_toEndOf="@+id/itemImg"
            card_view:layout_constraintTop_toTopOf="@+id/btnDelete"
            android:backgroundTint="#F5BC2E"
            card_view:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/itemImg"
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/logo"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/cbItem" />

        <TextView
            android:id="@+id/tvCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:text="@string/cost"
            android:textSize="20sp"
            card_view:layout_constraintBottom_toTopOf="@+id/guideline"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/itemImg"
            card_view:layout_constraintTop_toTopOf="@+id/guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            card_view:layout_constraintGuide_begin="32dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="#F5BC2E"
            android:text="@string/details"
            card_view:layout_constraintBottom_toBottomOf="@+id/btnEdit"
            card_view:layout_constraintEnd_toStartOf="@+id/btnDelete"
            card_view:layout_constraintStart_toEndOf="@+id/btnEdit"
            card_view:layout_constraintTop_toTopOf="@+id/btnEdit" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
